Added meta data provider, separated types
